--- a/memory-fix.org
+++ b/memory-fix.org
@@ -4,7 +4,7 @@
 ** DONE allow for alternative loading with the object directly, like how some props in HollywooFlixel are animated via ActorFlxSprite
 ** DONE if the assetpath doesn't start with assets/, call (assetPath "<typeDir>" "<path>")
 ** DONE make loading things at runtime a compiler error 
-* TODO in all new* methods, save the path that was loaded
-* TODO in all with_ macros, mark those assets as dirty (needing to be reloaded)
-* TODO Movie.scavenge before cleanup
-* TODO in all new* methods, don't load the new thing if it exists already
+* DONE try disabling AssetCache completely
+* DONE in all with_ macros, mark those assets as dirty (needing to be reloaded)
+* DONE Movie.scavenge before cleanup
+* DONE in all new* methods, don't load the new thing if it exists already
